compiler/testData/diagnostics/tests/Kt60343.fir.kt
fun <T> test(x: Any) {
    <!UNRESOLVED_REFERENCE!>println<!>(<!EXPLICIT_TYPE_ARGUMENTS_IN_PROPERTY_ACCESS, TYPE_PARAMETER_IS_NOT_AN_EXPRESSION!>T<!><T>)
}
